--- a/src/index.html
+++ b/src/index.html
@@ -841,7 +841,7 @@
 
             <div class="my-4 flex flex-col gap-2">
               <!-- <p class="font-semibold">Contact Us</p> -->
-              <p>Bilal Masjid 4115 SW 160th Beaverton OR 97007</p>
+              <p>Address: 4115 SW 160th Beaverton, OR 97008</p>
               <p>Email: bilalmasjid@bilalmasjid.com</p>
             </div>
           </div>
