--- a/src/index.html
+++ b/src/index.html
@@ -235,7 +235,7 @@
           <nav id="menu" class="hidden md:flex gap-10 items-center">
             <a href="#" class="no-underline text-black hover:text-gray-700">About Us</a>
             <a href="#" class="no-underline text-black hover:text-gray-700">Services</a>
-            <a href="#" class="no-underline text-black hover:text-gray-700">Events</a>
+            <a href="events.html" class="no-underline text-black hover:text-gray-700">Events</a>
             <div class="relative group">
               <a href="#" class="no-underline text-black hover:text-gray-700">Donations</a>
               <div
