--- a/src/events.html
+++ b/src/events.html
@@ -117,11 +117,13 @@
         @media (max-width: 768px) {
             #calendar-and-list {
                 flex-direction: column;
-                gap: 20px;
+                gap: 16px;
                 /* Add gap between calendar and event list */
             }
-
-            #calendar,
+            #calendar{
+                max-height: 100vh;
+                max-width: 100vw;
+            }
             #event-list {
                 width: 100%;
                 margin: 0;
@@ -259,8 +261,8 @@
         </div>
 
 
-        <div id="calendar-and-list" class="flex mx-16 flex-col md:flex-row gap-4 md:gap-8">
-            <div id="calendar" class="w-full overflow-x-hidden lg:w-2/3"></div>
+        <div id="calendar-and-list" class="flex mx-16 flex-col md:flex-row gap-4 md:gap-8"> 
+            <div id="calendar" class="w-full h-screen md:w-3/4 lg:w-2/3 xl:w-1/2 mx-auto overflow-y-auto overflow-x-hidden"></div>
             <div id="event-list" class="w-full md:w-1/3 bg-gray-100 p-4 mt-4 md:mt-0 md:ml-4">
                 <h2 class="text-xl font-semibold mb-2">Event List</h2>
                 <ul id="event-items" class="list-disc pl-5"></ul>
