--- a/src/index.html
+++ b/src/index.html
@@ -268,7 +268,7 @@
           class="sm:hidden flex flex-col justify-center items-center z-10 mt-4 bg-white shadow-md w-full py-4 ">
           <a href="about.html" class="no-underline text-black hover:text-gray-700 py-2">About Us</a>
           <a href="#" class="no-underline text-black hover:text-gray-700 py-2">Services</a>
-          <a href="#" class="no-underline text-black hover:text-gray-700 py-2">Events</a>
+          <a href="events.html" class="no-underline text-black hover:text-gray-700 py-2">Events</a>
           <div class="relative">
             <button id="donations-button"
               class="no-underline text-black hover:text-gray-700 py-2 block w-full text-left">
