--- a/src/about.html
+++ b/src/about.html
@@ -25,7 +25,7 @@
       }
     </style>
   </head>
-  <body class="font-noto-sans">
+  <body class="font-noto-sans overflow-x-hidden">
     <div
       class="flex flex-col justify-center items-center font-noto-sans text-black"
     >
@@ -427,7 +427,7 @@
       </div>
     </div>
 
-    </div>
+  
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const menuBtn = document.getElementById("menu-btn");
