--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,7 @@
 
           <!-- Navigation -->
           <nav id="menu" class="hidden md:flex gap-10 items-center">
-            <a href="#" class="no-underline text-black hover:text-gray-700">About Us</a>
+            <a href="about.html" class="no-underline text-black hover:text-gray-700">About Us</a>
             <a href="#" class="no-underline text-black hover:text-gray-700">Services</a>
             <a href="events.html" class="no-underline text-black hover:text-gray-700">Events</a>
             <div class="relative group">
