--- a/src/events.html
+++ b/src/events.html
@@ -282,6 +282,7 @@
         <div id="event-controls" class="hidden flex sm:flex-row justify-center items-center mb-16 p-4 gap-4 sm:gap-6">
             <input type="text" id="event-title" placeholder="Event Title"
                 class="border px-3 py-2 rounded w-full sm:w-auto" />
+            <input type="date" id="event-date" class="border px-3 py-2 rounded w-full sm:w-auto" />
             <button id="addeventbtn" class="bg-green-600 text-white px-4 py-2 rounded w-full sm:w-auto">Add
                 Event</button>
         </div>
